[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.16"
etagere = "0.2.6"
cosmic-text = {git = "https://github.com/pop-os/cosmic-text", rev = "a93ec8adf87c9af7021b61c8ae558a099388aab2"}
lru = "0.9"

[dev-dependencies]
winit = "0.27.0"
pollster = "0.2.5"
