[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.16"
etagere = "0.2.6"
cosmic-text = {git = "https://github.com/pop-os/cosmic-text", rev = "79275d15e857428e9b8874f28413197e878f3788"}
lru = "0.10"

[dev-dependencies]
winit = "0.28.6"
pollster = "0.3.0"
